--- a/Demo/RPSlidingMenuDemo/RPSlidingMenuDemo/Base.lproj/Main.storyboard
+++ b/Demo/RPSlidingMenuDemo/RPSlidingMenuDemo/Base.lproj/Main.storyboard
@@ -44,38 +44,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blue_bg" id="mqc-Jm-c4V">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="code_back" id="mqc-Jm-c4V">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I rock my hacks with" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HaW-Le-sKp">
-                                <rect key="frame" x="73" y="28" width="182" height="28"/>
+                                <rect key="frame" x="73" y="28" width="197" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="20"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slide2" id="lQc-Hv-YSC">
-                                <rect key="frame" x="29" y="207" width="271" height="158"/>
+                                <rect key="frame" x="45" y="233" width="231" height="134"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="node" id="03d-oT-YGb">
-                                <rect key="frame" x="218" y="466" width="82" height="82"/>
+                                <rect key="frame" x="218" y="469" width="82" height="82"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rails_logo" id="4QO-Ad-cZx">
-                                <rect key="frame" x="29" y="468" width="68" height="80"/>
+                                <rect key="frame" x="29" y="471" width="68" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="c_knr.jpg" id="76m-LS-iTA">
-                                <rect key="frame" x="120" y="373" width="88" height="90"/>
+                                <rect key="frame" x="120" y="375" width="88" height="90"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="objective-c-logo" id="fhU-Yh-glG">
-                                <rect key="frame" x="82" y="50" width="165" height="147"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="objc-c" id="fhU-Yh-glG">
+                                <rect key="frame" x="112" y="71" width="104" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="6Lk-8J-2CG">
-                                <rect key="frame" x="17" y="20" width="44" height="44"/>
+                                <rect key="frame" x="17" y="20" width="32" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="backbutton">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -92,6 +92,7 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="backButton" destination="6Lk-8J-2CG" id="1ib-Vn-DWZ"/>
+                        <outlet property="background_imageview" destination="mqc-Jm-c4V" id="uGY-Hx-wwo"/>
                         <outlet property="cBadge" destination="76m-LS-iTA" id="5Z2-73-MeM"/>
                         <outlet property="nodeBadge" destination="03d-oT-YGb" id="br7-xC-IIo"/>
                         <outlet property="objcBadge" destination="fhU-Yh-glG" id="U7P-OG-RHE"/>
@@ -118,7 +119,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="UPm-ER-Wqb">
-                                <rect key="frame" x="20" y="20" width="48" height="49"/>
+                                <rect key="frame" x="20" y="20" width="32" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="backbutton">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -133,7 +134,7 @@
                     <navigationItem key="navigationItem" title="What? " id="FNZ-Yk-7nJ"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
-                        <outlet property="backButton" destination="UPm-ER-Wqb" id="NaQ-pw-4Y0"/>
+                        <outlet property="backButton" destination="UPm-ER-Wqb" id="GT0-Y5-40s"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rgZ-2Y-Bzt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -148,10 +149,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" id="ebE-wn-IIS">
-                                <rect key="frame" x="15" y="113" width="285" height="191"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" textAlignment="center" id="ebE-wn-IIS">
+                                <rect key="frame" x="15" y="113" width="285" height="174"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
+                                </accessibility>
                                 <string key="text">The group which started as just 3 interested computer science nerds, has grown into a lively bustling team (currently 18!) of community builders, designers, user experience researchers and even more student developers, building apps and products to make the college experience even more appealing.</string>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
@@ -159,18 +163,18 @@
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
                             <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bcare" id="dJ3-XU-21U">
-                                <rect key="frame" x="20" y="312" width="90" height="128"/>
+                                <rect key="frame" x="20" y="351" width="90" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pikuzone_bg" id="wwR-kM-H5a">
-                                <rect key="frame" x="115" y="312" width="90" height="128"/>
+                                <rect key="frame" x="115" y="351" width="90" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="slide2" id="otb-Nt-xPt">
-                                <rect key="frame" x="208" y="312" width="90" height="128"/>
+                                <rect key="frame" x="208" y="351" width="90" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Co-founder of Grinnell Appdev" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tZV-3Y-4jx">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Co-founder of Grinnell Appdev \n and other" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tZV-3Y-4jx">
                                 <rect key="frame" x="6" y="35" width="314" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
@@ -184,23 +188,40 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" textAlignment="center" id="lkh-Vm-Ndt">
-                                <rect key="frame" x="15" y="489" width="285" height="65"/>
+                            <view contentMode="scaleToFill" id="wU5-Jp-Tui" userLabel="Left Shimmering View" customClass="FBShimmeringView">
+                                <rect key="frame" x="0.0" y="73" width="74" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" editable="NO" text="See more at https://www.barkcare.com" textAlignment="center" id="lkh-Vm-Ndt">
+                                <rect key="frame" x="15" y="518" width="285" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" link="YES"/>
                             </textView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="down_trigger" id="dWr-60-Avs">
+                                <rect key="frame" x="144" y="97" width="26" height="14"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap these images to see more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9mi-Wq-jCz">
+                                <rect key="frame" x="48" y="315" width="230" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-UltraLight" family="Avenir Next" pointSize="13"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="bottomTextview" destination="lkh-Vm-Ndt" id="e7M-zs-d6p"/>
                         <outlet property="descriptionTextview" destination="ebE-wn-IIS" id="dbn-QO-UhZ"/>
+                        <outlet property="downTriggerImageView" destination="dWr-60-Avs" id="eRk-Im-u9u"/>
                         <outlet property="leftImageView" destination="dJ3-XU-21U" id="nLQ-dV-rQn"/>
+                        <outlet property="leftShimmeringView" destination="wU5-Jp-Tui" id="Vrn-N6-QCx"/>
                         <outlet property="midImageView" destination="wwR-kM-H5a" id="4Aa-di-9IT"/>
                         <outlet property="rightImageView" destination="otb-Nt-xPt" id="3Qz-s8-Oh1"/>
                         <outlet property="shimmeringView" destination="LKy-OW-lhf" id="5ap-2Y-Dia"/>
@@ -227,7 +248,7 @@
                                 </connections>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="KCY-8V-qdk">
-                                <rect key="frame" x="20" y="20" width="44" height="45"/>
+                                <rect key="frame" x="20" y="20" width="32" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="backbutton">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -270,12 +291,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="backbutton" width="113" height="114"/>
+        <image name="backbutton" width="43" height="43"/>
         <image name="bcare" width="1280" height="1050"/>
-        <image name="blue_bg" width="640" height="1136"/>
         <image name="c_knr.jpg" width="240" height="240"/>
+        <image name="code_back" width="765" height="1063"/>
+        <image name="down_trigger" width="91" height="45"/>
         <image name="node" width="375" height="360"/>
-        <image name="objective-c-logo" width="213" height="190"/>
+        <image name="objc-c" width="264" height="326"/>
         <image name="pikuzone_bg" width="1280" height="1050"/>
         <image name="rails_logo" width="316" height="376"/>
         <image name="slide2" width="500" height="293"/>
